fix contactInfo and contactForm responsive overflow issues

--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -85,6 +85,10 @@
     color: #000;
   }
 
+  .contactForm-textArea {
+    max-width: 100%;
+  }
+
   .loader {
     margin: 6px 0;
     font-size: 6px;
